--- a/Word2Vec.ipynb
+++ b/Word2Vec.ipynb
@@ -3,7 +3,6 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Word2Vec",
       "provenance": [],
       "toc_visible": true
     },
@@ -25,7 +24,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HJsGu7d2AcPF"
+        "id": "HJsGu7d2AcPF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f5b83d08-ff8e-4940-df77-0b6368988337"
       },
       "source": [
         "import torch\n",
@@ -36,8 +39,19 @@
         "\n",
         "torch.manual_seed(1)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<torch._C.Generator at 0x7c5a8ff996d0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -51,7 +65,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "btcjnvBdj50N"
+        "id": "btcjnvBdj50N",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e6235397-2b7f-4e25-b17c-ca4661ebe4db"
       },
       "source": [
         "word_to_ix = {\"hello\": 0, \"world\": 1}\n",
@@ -60,8 +78,17 @@
         "hello_embed = embeds(lookup_tensor)\n",
         "print(hello_embed)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[ 0.6614,  0.2669,  0.0617,  0.6213, -0.4519]],\n",
+            "       grad_fn=<EmbeddingBackward0>)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -85,7 +112,7 @@
         "    idxs = [word_to_id[w] for w in context]\n",
         "    return torch.tensor(idxs, dtype=torch.long)\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -101,7 +128,7 @@
         "            index = i\n",
         "    return index"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -113,7 +140,7 @@
         "def get_max_prob_result(input, id_to_word):\n",
         "    return id_to_word[get_index_of_max(input)]"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -128,7 +155,7 @@
         "word_to_id = {}\n",
         "id_to_word = {}"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -144,13 +171,17 @@
         "called a program. People create programs to direct processes. In effect,\n",
         "we conjure the spirits of the computer with our spells.\"\"\".split()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TT2qOOHYPZFl"
+        "id": "TT2qOOHYPZFl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fa96224f-8d9f-4cd9-847a-c0750f235621"
       },
       "source": [
         "vocab = set(raw_text)\n",
@@ -158,8 +189,17 @@
         "print(vocab)\n",
         "print(len(vocab))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'called', 'a', 'we', 'We', 'things', 'other', 'processes', 'processes.', 'directed', 'about', 'they', 'study', 'data.', 'are', 'create', 'idea', 'People', 'spirits', 'process.', 'spells.', 'evolve,', 'the', 'program.', 'is', 'computer', 'evolution', 'pattern', 'beings', 'rules', 'by', 'computational', 'As', 'process', 'manipulate', 'with', 'our', 'effect,', 'Computational', 'computers.', 'of', 'abstract', 'direct', 'that', 'conjure', 'to', 'In', 'inhabit', 'The', 'programs'}\n",
+            "49\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -178,7 +218,7 @@
         "    target = raw_text[i]\n",
         "    data.append((context, target))"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -187,10 +227,22 @@
         "print(data[:5])"
       ],
       "metadata": {
-        "id": "AEhdQTwderEh"
+        "id": "AEhdQTwderEh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "08658b9a-c12e-454d-c303-19b764eccc1e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[(['We', 'are', 'to', 'study'], 'about'), (['are', 'about', 'study', 'the'], 'to'), (['about', 'to', 'the', 'idea'], 'study'), (['to', 'study', 'idea', 'of'], 'the'), (['study', 'the', 'of', 'a'], 'idea')]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -202,19 +254,12 @@
         "\n",
         "    def __init__(self, vocab_size, embedding_dim):\n",
         "        super(CBOW, self).__init__()\n",
-        "\n",
-        "        #out: 1 x emdedding_dim\n",
         "        self.embeddings = nn.Embedding(vocab_size, embedding_dim)\n",
-        "\n",
         "        self.linear1 = nn.Linear(embedding_dim, 128)\n",
-        "\n",
         "        self.activation_function1 = nn.ReLU()\n",
-        "        \n",
-        "        #out: 1 x vocab_size\n",
         "        self.linear2 = nn.Linear(128, vocab_size)\n",
-        "\n",
         "        self.activation_function2 = nn.LogSoftmax(dim = -1)\n",
-        "        \n",
+        "\n",
         "\n",
         "    def forward(self, inputs):\n",
         "        embeds = sum(self.embeddings(inputs)).view(1,-1)\n",
@@ -228,7 +273,7 @@
         "        word = torch.LongTensor([word_to_id[word]])\n",
         "        return self.embeddings(word).view(1,-1)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -242,7 +287,7 @@
         "loss_function = nn.NLLLoss()\n",
         "optimizer = torch.optim.SGD(model.parameters(), lr=0.001)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -253,7 +298,7 @@
       "metadata": {
         "id": "YUs84H82frQy"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -265,39 +310,49 @@
         "for epoch in range(3):\n",
         "    total_loss = 0\n",
         "    for context, target in data:\n",
-        "        context_vector = make_context_vector(context, word_to_id) \n",
-        "        #print(context_vector)\n",
-        "        #print(word_to_id[target])\n",
+        "        context_vector = make_context_vector(context, word_to_id)\n",
         "        model.zero_grad()\n",
         "        log_probs = model(context_vector)\n",
-        "        #print(log_probs)\n",
         "        loss = loss_function(log_probs, torch.tensor([word_to_id[target]], dtype=torch.long))\n",
         "        loss.backward()\n",
         "        optimizer.step()\n",
-        "        \n",
         "\n",
         "        total_loss += loss.data\n",
         "    loss_list.append(total_loss)\n"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t3eXAu-6kBKz"
+        "id": "t3eXAu-6kBKz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "804ce684-ff36-4100-df7a-876f24e91a7e"
       },
       "source": [
         "# TEST\n",
         "context = ['about', 'process', 'inhabit', 'directed']\n",
         "context_vector = make_context_vector(context, word_to_id)\n",
         "result = model(context_vector).data.numpy()\n",
-        "print('Raw text: {}\\n'.format(' '.join(raw_text)))\n",
+        "# print('Raw text: {}\\n'.format(' '.join(raw_text)))\n",
         "print('Context: {}\\n'.format(context))\n",
         "print('Prediction: {}'.format(get_max_prob_result(result[0], id_to_word)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Context: ['about', 'process', 'inhabit', 'directed']\n",
+            "\n",
+            "Prediction: evolution\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -316,9 +371,7 @@
       "metadata": {
         "id": "LNLaqfI7QBdp"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
